name:                Deadpan-DDP
version:             0.1.0.1
synopsis:            Deadpan-DDP Project...
homepage:            http://github.com/sordina/Deadpan-DDP
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.EJson, Data.EJson.EJson, Data.EJson.Prism, Data.EJson.Aeson,
                       Web.DDP.Deadpan, Web.DDP.Deadpan.DDP, Web.DDP.Deadpan.DSL
  build-depends:       base -any, websockets, network,
                       text, unordered-containers, base64-bytestring,
                       aeson, scientific, bytestring,
                       vector, convertible, lens,
                       network-uri, safe, mtl,
                       containers, stm
  hs-source-dirs:      src
  default-language:    Haskell2010

executable deadpan
  main-is:             Main.hs
  build-depends:       base -any, websockets, network,
                       text, unordered-containers, base64-bytestring,
                       aeson, scientific, bytestring,
                       vector, convertible, lens,
                       network-uri, safe, mtl,
                       containers, stm
  hs-source-dirs:      src
  default-language:    Haskell2010
