name:                Deadpan-Test-Clients
version:             0.1.0.0
synopsis:            Clients for the Deadpan-DDP library.
homepage:            https://github.com/sordina/Deadpan-DDP
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Deadpan-Client-Simple
  main-is:             Simple.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, Deadpan-DDP >=0.9, stm >=2.4 && <2.5, ansi-terminal >=0.6 && <0.7, text >=1.1 && <1.2, unordered-containers >=0.2 && <0.3, vty-ui >=1.8 && <1.9, vty >=5.2 && <5.3, lens >=4.4 && <4.5
  default-language:    Haskell2010
  ghc-options:         -O3 -threaded -with-rtsopts -N

executable Deadpan-Client-Todo-GUI
  main-is:             TodoGui.hs
  ghc-options:         -O3 -threaded -with-rtsopts -N
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, Deadpan-DDP >=0.9, stm >=2.4 && <2.5, ansi-terminal >=0.6 && <0.7, text >=1.1 && <1.2, unordered-containers >=0.2 && <0.3, vty-ui >=1.8 && <1.9, vty >=5.2 && <5.3, lens >=4.4 && <4.5
  default-language:    Haskell2010

executable Deadpan-Client-Todo-GUI-2
  main-is:             TodoGui2.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, Deadpan-DDP >=0.9, stm >=2.4 && <2.5, ansi-terminal >=0.6 && <0.7, text >=1.1 && <1.2, unordered-containers >=0.2 && <0.3, vty-ui >=1.8 && <1.9, vty >=5.2 && <5.3, lens >=4.4 && <4.5
  default-language:    Haskell2010
  ghc-options:         -O3 -threaded -with-rtsopts -N

executable Deadpan-Client-Todos
  main-is:             Todos.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8, Deadpan-DDP >=0.9, stm >=2.4 && <2.5, ansi-terminal >=0.6 && <0.7, text >=1.1 && <1.2, unordered-containers >=0.2 && <0.3, vty-ui >=1.8 && <1.9, vty >=5.2 && <5.3, lens >=4.4 && <4.5
  default-language:    Haskell2010
  ghc-options:         -O3 -threaded -with-rtsopts -N
